initial layout for photography site

--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="./dist/style.css">
 </head>
 
 <body>
-    <div class="container"></div>
-    <script type="text/javascript" src="./dist/app-browserify.js"></script>
+    <div class="container">
+    	<div class="toolbar">
+    		<span>Paul Saad</span>
+    		<span>Photography</span>
+    	</div>
+
+    	<div class="page-title">
+    		<span>Old Stock Photos</span>
+    	</div>
+
+    	<div class="image">
+    		<img src="http://41.media.tumblr.com/ea82e5fa7167384028b48cda7b0572c9/tumblr_nn60c8Hsjm1sfie3io1_1280.jpg">
+    		<h3>Lion Tamer <span>02/10/1934</span> </h3>
+    		<ul>
+    			<li>Canon Powershot S95</li>
+    			<li>22.5mm</li>
+    			<li>ƒ/5.6</li>
+    			<li>1/1000</li>
+    			<li>80</li>
+    		</ul>
+    	</div>
+    </div>
+
 </body>
 
 </html>
